fix: fix white border tip issues in dark mode

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -16,9 +16,9 @@ a {
 }
 
 @media (prefers-color-scheme: dark) {
-  html {
+  /* html {
     color-scheme: dark;
-  }
+  } remove to fix white border issue in dark mode*/
   body {
     color: white;
     background: black;
